C2: Corrected spacing at Extras and Removed Contacts from footer

--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
             <div class="container">
                 <h2>Extracurricular</h2>
                 <div class="extracurricular-item">
-                    <p><strong>Microsoft Fix-a-thon (2021):</strong> elected participant in the event.</p>
+                    <p><strong>Microsoft Fix-a-thon (2021):</strong> Selected participant in the event.</p>
                 </div>
                 <div class="extracurricular-item">
-                    <p><strong>WiDS Guwahati:</strong>Volunteer at WiDS Guwahati. Contributed to event planning and
+                    <p><strong>WiDS Guwahati:</strong> Volunteer at WiDS Guwahati. Contributed to event planning and
                         execution for a local organization.</p>
                 </div>
                 <div class="extracurricular-item">
-                    <p><strong>Power BI PwC’s:</strong>Data Analytics Virtual Internship at BCG</p>
+                    <p><strong>Power BI PwC’s:</strong> Data Analytics Virtual Internship at BCG</p>
                 </div>
             </div>
         </section>
@@ -182,7 +182,7 @@
                     <a href="https://github.com/ritikkumarjain" target="_blank"><img src="./images/github.png" width="40" alt="Github" class="raise" ></a>
                 </div>
                 <p>Made with <img src="./images/love.png" width="25" class="heartbeat" alt ="hearbeat"> by ऋतिक. | <a href="#experience">Experience</a> | <a
-                        href="#projects">Projects</a> | <a href="#contact">Contact</a></p>
+                        href="#projects">Projects</a></p>
             </div>
         </footer>
         <script> // Smooth scrolling for anchor links document.querySelectorAll('a[href^="#"]').forEach(anchor => { anchor.addEventListener('click', function (e) { e.preventDefault(); document.querySelector(this.getAttribute('href')).scrollIntoView({ behavior: 'smooth' }); }); }); </script>
