C3: Icons corrections. adding animations

--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
             <div class="container">
                 <h2>Certifications</h2>
                 <div class="certifications">
-                    <div class="certification-item"> <img
-                            src="https://d1.awsstatic.com/training-and-certification/certification-badges/AWS-Certified-Cloud-Practitioner_badge.634f8a21af2e0e956ed8905a72366146ba22b74c.png"
-                            alt="AWS Certified">
-                        <h3>AWS Certified Cloud Practitioner</h3>
+                    <div class="certification-item"> 
+                        <a href="some link" target="_blank">
+                            <img class = "certification-img" src="https://d1.awsstatic.com/training-and-certification/certification-badges/AWS-Certified-Cloud-Practitioner_badge.634f8a21af2e0e956ed8905a72366146ba22b74c.png" alt="AWS Certified">
+                            <h4>AWS Certified Cloud Practitioner <i class="fa-solid fa-link fa-spin"></i></h4>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -72,32 +73,32 @@
                 <div class="projects">
                     <div class="project-item">
                         <h3>Policy Administration System</h3>
-                        <a href="#" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-                        <p>• Implemented a policy administration system using .NET framework for the backend, React for
+                        <a href="#" target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
+                        <p><i class="fa-solid fa-angle-right"></i> Implemented a policy administration system using .NET framework for the backend, React for
                             the frontend, and
                             MySQL Server as the database. Adopted a microservice-based architecture pattern for improved
                             scalability and
                             maintainability.</p>
-                        <p>• Crafted and deployed the system infrastructure on AWS, leveraging EC2 for scalable compute
+                        <p><i class="fa-solid fa-angle-right"></i> Crafted and deployed the system infrastructure on AWS, leveraging EC2 for scalable compute
                             resources, RDS for
                             reliable database management, and orchestrating REST API deployment for seamless integration
                             and accessibility.</p>
-                        <p>• Utilized Agile Methodology to manage project development.</p>
+                        <p><i class="fa-solid fa-angle-right"></i> Utilized Agile Methodology to manage project development.</p>
                     </div>
                     <div class="project-item">
                         <h3>Topic Modelling of Climate Disaster</h3>
-                        <a href="#" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-                        <p>• Scraped Twitter to create a dataset for Amphan Cyclone with approximately 130k rows.</p>
-                        <p>• Used BERTopic transformer pre-trained architecture to identify different topics.</p>
-                        <p>• Analyzed the topics represented with respect to time using a time series plot . Uncovered
+                        <a href="#" target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
+                        <p><i class="fa-solid fa-angle-right"></i> Scraped Twitter to create a dataset for Amphan Cyclone with approximately 130k rows.</p>
+                        <p><i class="fa-solid fa-angle-right"></i> Used BERTopic transformer pre-trained architecture to identify different topics.</p>
+                        <p><i class="fa-solid fa-angle-right"></i> Analyzed the topics represented with respect to time using a time series plot . Uncovered
                             noteworthy correlations
                             between tweet frequency and the pinnacle of the disaster’s impact.</p>
                     </div>
                     <div class="project-item">
                         <h3>Emotion Recognition</h3>
-                        <a href="#" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-                        <p>• Implemented a CNN to predict 7 different emotions of a human face.</p>
-                        <p>• Optimized hyperparameters of CNN to improve model performance. Secured a solid 69.55%
+                        <a href="#" target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
+                        <p><i class="fa-solid fa-angle-right"></i> Implemented a CNN to predict 7 different emotions of a human face.</p>
+                        <p><i class="fa-solid fa-angle-right"></i> Optimized hyperparameters of CNN to improve model performance. Secured a solid 69.55%
                             accuracy on the FER13
                             dataset, highlighting a competitive edge in performance.</p>
                     </div>
@@ -117,7 +118,7 @@
                     <div class="skill-item"> <img src="./images/grpc.png" alt="gRPC" width="50">
                         <p>gRPC</p>
                     </div>
-                    <div class="skill-item"> <i class="fab fa-aws aws"></i>
+                    <div class="skill-item"> </i>
                         <p>AWS</p>
                     </div>
                     <div class="skill-item"> <i class="fab fa-js javascript"></i>
@@ -177,7 +178,7 @@
         <footer>
             <div class="container">
                 <div class="contact-links">
-                    <a href="mailto:ritikjain10@outlook.com" target="_blank"><img src="./images/email.png" width = "40" alt="Email" class="raise" ></a>
+                    <a href="mailto:ritikjain10@outlook.com" target="_blank"><img src="./images/message.gif" width = "40" alt="Email" class="raise" ></a>
                     <a href="https://linkedin.com/in/ritikkumarjain" target="_blank"><img src="./images/linkedin.png" width="40" alt="LinkedIn" class="raise" ></a>
                     <a href="https://github.com/ritikkumarjain" target="_blank"><img src="./images/github.png" width="40" alt="Github" class="raise" ></a>
                 </div>
