--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <div class="experience-item">
                     <h3>Programmer Analyst</h3>
                     <p><b>Cognizant Technology Solutions | Sept 2022 - Present</b></p>
-                    <p>• Played a key role in development of a menu feature for a major food-chain’s digital ordering
+                    <p><i class="fa-solid fa-angle-right"></i> Played a key role in development of a menu feature for a major food-chain’s digital ordering
                         platform OrderServ 2.0 .
                         Optimized database operations to prevent database throttling during High Traffic periods.</p>
-                    <p>• Provided technical support, successfully troubleshot and resolved critical production/non-prod
+                    <p><i class="fa-solid fa-angle-right"></i> Provided technical support, successfully troubleshot and resolved critical production/non-prod
                         issues and
                         implementing bug fixes and enhancements to maintain system stability ensuring minimal downtime.
                     </p>
-                    <p>• Collaborated effectively with cross functional teams to enhance ordering, payment and delivery
+                    <p><i class="fa-solid fa-angle-right"></i> Collaborated effectively with cross functional teams to enhance ordering, payment and delivery
                         features.Regularly
                         engaged with client from various markets, gathering requirements and incorporating feedback to
                         improve platform
@@ -41,13 +41,13 @@
                 <div class="experience-item">
                     <h3>Programmer Analyst</h3>
                     <p><b>Cognizant Technology Solutions | Mar 2022 - Aug 2022</b></p>
-                    <p>• Quickly developed proficiency in various tools and technologies, including C#, .NET Frameworks,
+                    <p><i class="fa-solid fa-angle-right"></i> Quickly developed proficiency in various tools and technologies, including C#, .NET Frameworks,
                         DSA, Design
                         patterns, etc through intensive training and handson projects.</p>
-                    <p>• Actively contributed to the implementation of the MFPE project Policy Administration System,
+                    <p><i class="fa-solid fa-angle-right"></i> Actively contributed to the implementation of the MFPE project Policy Administration System,
                         closely with team
                         members and mentors.</p>
-                    <p>• Demonstrated strong dedication to professional development consistently completing assessments
+                    <p><i class="fa-solid fa-angle-right"></i> Demonstrated strong dedication to professional development consistently completing assessments
                         and progressing
                         through training training programs.</p>
 
