--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ritik Kumar Jain - Programmer Analyst</title>
+        <title>Ritik's website</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link rel="stylesheet" href="./styles.css">
     </head>
@@ -59,7 +59,7 @@
                 <h2>Certifications</h2>
                 <div class="certifications">
                     <div class="certification-item"> 
-                        <a href="some link" target="_blank">
+                        <a href="https://drive.google.com/file/d/1sSTfS1WgAajzZ85Pobg21DLzxaB5tmhz/view" target="_blank">
                             <img class = "certification-img" src="https://d1.awsstatic.com/training-and-certification/certification-badges/AWS-Certified-Cloud-Practitioner_badge.634f8a21af2e0e956ed8905a72366146ba22b74c.png" alt="AWS Certified">
                             <h4>AWS Certified Cloud Practitioner <i class="fa-solid fa-link fa-spin"></i></h4>
                         </a>
@@ -73,7 +73,8 @@
                 <div class="projects">
                     <div class="project-item">
                         <h3>Policy Administration System</h3>
-                        <a href="#" target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
+                        <a href="https://github.com/ritikkumarjain/PolicyAdministrationSystem" target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
+                        <a href="https://drive.google.com/file/d/1ikBoa0CFYkPrcauJSvteeAKgZ7dKklmN/view" target="_blank"><i class="fa-solid fa-video fa-bounce"></i> Demo</a>
                         <p><i class="fa-solid fa-angle-right"></i> Implemented a policy administration system using .NET framework for the backend, React for
                             the frontend, and
                             MySQL Server as the database. Adopted a microservice-based architecture pattern for improved
@@ -87,7 +88,7 @@
                     </div>
                     <div class="project-item">
                         <h3>Topic Modelling of Climate Disaster</h3>
-                        <a href="#" target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
+                        <a href="https://github.com/ritikkumarjain/NLP/tree/main/Topic%20Modelling" target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
                         <p><i class="fa-solid fa-angle-right"></i> Scraped Twitter to create a dataset for Amphan Cyclone with approximately 130k rows.</p>
                         <p><i class="fa-solid fa-angle-right"></i> Used BERTopic transformer pre-trained architecture to identify different topics.</p>
                         <p><i class="fa-solid fa-angle-right"></i> Analyzed the topics represented with respect to time using a time series plot . Uncovered
@@ -96,7 +97,7 @@
                     </div>
                     <div class="project-item">
                         <h3>Emotion Recognition</h3>
-                        <a href="#" target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
+                        <a href="https://github.com/ritikkumarjain/Deep-Learning/tree/main/EmotionDetection" target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
                         <p><i class="fa-solid fa-angle-right"></i> Implemented a CNN to predict 7 different emotions of a human face.</p>
                         <p><i class="fa-solid fa-angle-right"></i> Optimized hyperparameters of CNN to improve model performance. Secured a solid 69.55%
                             accuracy on the FER13
