--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="certification-item"> 
                         <a href="https://drive.google.com/file/d/1sSTfS1WgAajzZ85Pobg21DLzxaB5tmhz/view" target="_blank">
                             <img class = "certification-img" src="https://d1.awsstatic.com/training-and-certification/certification-badges/AWS-Certified-Cloud-Practitioner_badge.634f8a21af2e0e956ed8905a72366146ba22b74c.png" alt="AWS Certified">
-                            <h4>AWS Certified Cloud Practitioner <i class="fa-solid fa-link fa-spin"></i></h4>
+                            <h4>AWS Certified Cloud Practitioner <i class="fa-solid fa-link fa-spin" title="Open External Link"></i></h4>
                         </a>
                     </div>
                 </div>
@@ -110,52 +110,52 @@
             <div class="container">
                 <h2>Skills</h2>
                 <div class="skills">
-                    <div class="skill-item"> <img src="./images/csharp.png" alt="C#" width="50">
+                    <div class="skill-item"> <img src="./images/csharp.png" alt="C#" width="50" title="C#">
                         <p>C#</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/dotnet.png" alt=".NET" width="50">
+                    <div class="skill-item"> <img src="./images/dotnet.png" alt=".NET" width="50" title=">NET Framework">
                         <p>.NET</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/grpc.png" alt="gRPC" width="50">
+                    <div class="skill-item"> <img src="./images/grpc.png" alt="gRPC" width="50" title="Remote Procedural Calls">
                         <p>gRPC</p>
                     </div>
-                    <div class="skill-item"> </i>
+                    <div class="skill-item" title="Amazon Web Services"> <i class="fab fa-aws aws"></i>
                         <p>AWS</p>
                     </div>
-                    <div class="skill-item"> <i class="fab fa-js javascript"></i>
+                    <div class="skill-item"> <i class="fab fa-js javascript" title="Javascript"></i>
                         <p>JavaScript</p>
                     </div>
-                    <div class="skill-item"> <i class="fab fa-react react"></i>
+                    <div class="skill-item"> <i class="fab fa-react react" title="React"></i>
                         <p>React</p>
                     </div>
-                    <div class="skill-item"> <i class="fab fa-node node"></i>
+                    <div class="skill-item"> <i class="fab fa-node node" title="Node.js"></i>
                         <p>Node.js</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/mysql.png" alt="Dynamo DB" width="50">
+                    <div class="skill-item"> <img src="./images/mysql.png" alt="MySQL" width="50" title="MySQL">
                         <p>MySQL</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/sql.png" alt="SQL Server" width="50">
+                    <div class="skill-item"> <img src="./images/sql.png" alt="SQL Server" width="50" title="SQL Server">
                         <p>SQL Server</p>
                     </div>
-                    <div class="skill-item"> <i class="fab fa-git-alt git"></i>
+                    <div class="skill-item"> <i class="fab fa-git-alt git" title="Git"></i>
                         <p>Git</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/ef.png" alt="Entity Framework" width="50">
+                    <div class="skill-item"> <img src="./images/ef.png" alt="Entity Framework" width="50" title="Entity Framework">
                         <p>Entity Framework</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/asp.png" alt="ASP .NET core" width="40">
+                    <div class="skill-item"> <img src="./images/asp.png" alt="ASP .NET core" width="40" title="ASP .NET Core">
                         <p>ASP .NET Core</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/dynamo.png" alt="Dynamo DB" width="40">
+                    <div class="skill-item"> <img src="./images/dynamo.png" alt="Dynamo DB" width="40" title="DynamoDB">
                         <p>NoSQL DynamoDB</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/agile.png" alt="Agile Methodology" width="50">
+                    <div class="skill-item"> <img src="./images/agile.png" alt="Agile Methodology" width="50" title="Agile">
                         <p>Agile</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/dsa.png" alt="Data Structures and Algorithms" width="50">
+                    <div class="skill-item"> <img src="./images/dsa.png" alt="Data Structures and Algorithms" width="50" title="Data Structures and Algorithms">
                         <p>DSA</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/dp.png" alt="Design Patterns" width="50">
+                    <div class="skill-item"> <img src="./images/dp.png" alt="Design Patterns" width="50" title="Design Patterns">
                         <p>Design Patterns</p>
                     </div>
                 </div>
@@ -179,9 +179,9 @@
         <footer>
             <div class="container">
                 <div class="contact-links">
-                    <a href="mailto:ritikjain10@outlook.com" target="_blank"><img src="./images/message.gif" width = "40" alt="Email" class="raise" ></a>
-                    <a href="https://linkedin.com/in/ritikkumarjain" target="_blank"><img src="./images/linkedin.png" width="40" alt="LinkedIn" class="raise" ></a>
-                    <a href="https://github.com/ritikkumarjain" target="_blank"><img src="./images/github.png" width="40" alt="Github" class="raise" ></a>
+                    <a href="mailto:ritikjain10@outlook.com" target="_blank"><img src="./images/message.gif" width = "40" alt="Email" class="raise" title="Email"></a>
+                    <a href="https://linkedin.com/in/ritikkumarjain" target="_blank"><img src="./images/linkedin.png" width="40" alt="LinkedIn" class="raise" title="LinkedIn"></a>
+                    <a href="https://github.com/ritikkumarjain" target="_blank"><img src="./images/github.png" width="40" alt="Github" class="raise" title="Github"></a>
                 </div>
                 <p>Made with <img src="./images/love.png" width="25" class="heartbeat" alt ="hearbeat"> by ऋतिक. | <a href="#experience">Experience</a> | <a
                         href="#projects">Projects</a></p>
