--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="skill-item"> <img src="./images/dsa.png" alt="Data Structures and Algorithms" width="50" title="Data Structures and Algorithms">
                         <p>DSA</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/dp.png" alt="Design Patterns" width="50" title="Design Patterns">
+                    <div class="skill-item"> <img src="./images/dp.png" alt="Design Patterns" width="50" >
                         <p>Design Patterns</p>
                     </div>
                 </div>
