Added leetcode Stats

--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
                 <div class="experience-item">
                     <h3>Programmer Analyst</h3>
                     <p><b>Cognizant Technology Solutions | Sept 2022 - Present</b></p>
-                    <p><i class="fa-solid fa-angle-right"></i> Played a key role in development of a menu feature for a major food-chain’s digital ordering
+                    <p><i class="fa-solid fa-angle-right"></i> Played a key role in development of a menu feature for a
+                        major food-chain’s digital ordering
                         platform OrderServ 2.0 .
                         Optimized database operations to prevent database throttling during High Traffic periods.</p>
-                    <p><i class="fa-solid fa-angle-right"></i> Provided technical support, successfully troubleshot and resolved critical production/non-prod
+                    <p><i class="fa-solid fa-angle-right"></i> Provided technical support, successfully troubleshot and
+                        resolved critical production/non-prod
                         issues and
                         implementing bug fixes and enhancements to maintain system stability ensuring minimal downtime.
                     </p>
-                    <p><i class="fa-solid fa-angle-right"></i> Collaborated effectively with cross functional teams to enhance ordering, payment and delivery
+                    <p><i class="fa-solid fa-angle-right"></i> Collaborated effectively with cross functional teams to
+                        enhance ordering, payment and delivery
                         features.Regularly
                         engaged with client from various markets, gathering requirements and incorporating feedback to
                         improve platform
@@ -41,13 +44,16 @@
                 <div class="experience-item">
                     <h3>Programmer Analyst</h3>
                     <p><b>Cognizant Technology Solutions | Mar 2022 - Aug 2022</b></p>
-                    <p><i class="fa-solid fa-angle-right"></i> Quickly developed proficiency in various tools and technologies, including C#, .NET Frameworks,
+                    <p><i class="fa-solid fa-angle-right"></i> Quickly developed proficiency in various tools and
+                        technologies, including C#, .NET Frameworks,
                         DSA, Design
                         patterns, etc through intensive training and handson projects.</p>
-                    <p><i class="fa-solid fa-angle-right"></i> Actively contributed to the implementation of the MFPE project Policy Administration System,
+                    <p><i class="fa-solid fa-angle-right"></i> Actively contributed to the implementation of the MFPE
+                        project Policy Administration System,
                         closely with team
                         members and mentors.</p>
-                    <p><i class="fa-solid fa-angle-right"></i> Demonstrated strong dedication to professional development consistently completing assessments
+                    <p><i class="fa-solid fa-angle-right"></i> Demonstrated strong dedication to professional
+                        development consistently completing assessments
                         and progressing
                         through training training programs.</p>
 
@@ -58,11 +64,23 @@
             <div class="container">
                 <h2>Certifications</h2>
                 <div class="certifications">
-                    <div class="certification-item"> 
-                        <a href="https://drive.google.com/file/d/1sSTfS1WgAajzZ85Pobg21DLzxaB5tmhz/view" target="_blank">
-                            <img class = "certification-img" src="https://d1.awsstatic.com/training-and-certification/certification-badges/AWS-Certified-Cloud-Practitioner_badge.634f8a21af2e0e956ed8905a72366146ba22b74c.png" alt="AWS Certified">
-                            <h4>AWS Certified Cloud Practitioner <i class="fa-solid fa-link fa-spin" title="Open External Link"></i></h4>
+                    <div class="certification-item">
+                        <a href="https://drive.google.com/file/d/1sSTfS1WgAajzZ85Pobg21DLzxaB5tmhz/view"
+                            target="_blank">
+                            <img class="certification-img"
+                                src="https://d1.awsstatic.com/training-and-certification/certification-badges/AWS-Certified-Cloud-Practitioner_badge.634f8a21af2e0e956ed8905a72366146ba22b74c.png"
+                                alt="AWS Certified">
+                            <h4>AWS Certified Cloud Practitioner <i class="fa-solid fa-link fa-spin"
+                                    title="Open External Link"></i></h4>
                         </a>
+                    </div>
+                </div>
+                <h2>Coding Stats</h2>
+                <div class="certifications">
+                    <div class="certification-item">
+                        <img src="https://leetcode.card.workers.dev/poshis?theme=default&font=baloo&extension=null"
+                            alt="LeetCode Stats" style="margin-bottom: 10px">
+                        <h4>Leetcode</h4>
                     </div>
                 </div>
             </div>
@@ -73,33 +91,45 @@
                 <div class="projects">
                     <div class="project-item">
                         <h3>Policy Administration System</h3>
-                        <a href="https://github.com/ritikkumarjain/PolicyAdministrationSystem" target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
-                        <a href="https://drive.google.com/file/d/1ikBoa0CFYkPrcauJSvteeAKgZ7dKklmN/view" target="_blank"><i class="fa-solid fa-video fa-bounce"></i> Demo</a>
-                        <p><i class="fa-solid fa-angle-right"></i> Implemented a policy administration system using .NET framework for the backend, React for
+                        <a href="https://github.com/ritikkumarjain/PolicyAdministrationSystem" target="_blank"><i
+                                class="fab fa-github fa-bounce"></i> GitHub</a>
+                        <a href="https://drive.google.com/file/d/1ikBoa0CFYkPrcauJSvteeAKgZ7dKklmN/view"
+                            target="_blank"><i class="fa-solid fa-video fa-bounce"></i> Demo</a>
+                        <p><i class="fa-solid fa-angle-right"></i> Implemented a policy administration system using .NET
+                            framework for the backend, React for
                             the frontend, and
                             MySQL Server as the database. Adopted a microservice-based architecture pattern for improved
                             scalability and
                             maintainability.</p>
-                        <p><i class="fa-solid fa-angle-right"></i> Crafted and deployed the system infrastructure on AWS, leveraging EC2 for scalable compute
+                        <p><i class="fa-solid fa-angle-right"></i> Crafted and deployed the system infrastructure on
+                            AWS, leveraging EC2 for scalable compute
                             resources, RDS for
                             reliable database management, and orchestrating REST API deployment for seamless integration
                             and accessibility.</p>
-                        <p><i class="fa-solid fa-angle-right"></i> Utilized Agile Methodology to manage project development.</p>
+                        <p><i class="fa-solid fa-angle-right"></i> Utilized Agile Methodology to manage project
+                            development.</p>
                     </div>
                     <div class="project-item">
                         <h3>Topic Modelling of Climate Disaster</h3>
-                        <a href="https://github.com/ritikkumarjain/NLP/tree/main/Topic%20Modelling" target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
-                        <p><i class="fa-solid fa-angle-right"></i> Scraped Twitter to create a dataset for Amphan Cyclone with approximately 130k rows.</p>
-                        <p><i class="fa-solid fa-angle-right"></i> Used BERTopic transformer pre-trained architecture to identify different topics.</p>
-                        <p><i class="fa-solid fa-angle-right"></i> Analyzed the topics represented with respect to time using a time series plot . Uncovered
+                        <a href="https://github.com/ritikkumarjain/NLP/tree/main/Topic%20Modelling" target="_blank"><i
+                                class="fab fa-github fa-bounce"></i> GitHub</a>
+                        <p><i class="fa-solid fa-angle-right"></i> Scraped Twitter to create a dataset for Amphan
+                            Cyclone with approximately 130k rows.</p>
+                        <p><i class="fa-solid fa-angle-right"></i> Used BERTopic transformer pre-trained architecture to
+                            identify different topics.</p>
+                        <p><i class="fa-solid fa-angle-right"></i> Analyzed the topics represented with respect to time
+                            using a time series plot . Uncovered
                             noteworthy correlations
                             between tweet frequency and the pinnacle of the disaster’s impact.</p>
                     </div>
                     <div class="project-item">
                         <h3>Emotion Recognition</h3>
-                        <a href="https://github.com/ritikkumarjain/Deep-Learning/tree/main/EmotionDetection" target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
-                        <p><i class="fa-solid fa-angle-right"></i> Implemented a CNN to predict 7 different emotions of a human face.</p>
-                        <p><i class="fa-solid fa-angle-right"></i> Optimized hyperparameters of CNN to improve model performance. Secured a solid 69.55%
+                        <a href="https://github.com/ritikkumarjain/Deep-Learning/tree/main/EmotionDetection"
+                            target="_blank"><i class="fab fa-github fa-bounce"></i> GitHub</a>
+                        <p><i class="fa-solid fa-angle-right"></i> Implemented a CNN to predict 7 different emotions of
+                            a human face.</p>
+                        <p><i class="fa-solid fa-angle-right"></i> Optimized hyperparameters of CNN to improve model
+                            performance. Secured a solid 69.55%
                             accuracy on the FER13
                             dataset, highlighting a competitive edge in performance.</p>
                     </div>
@@ -113,10 +143,12 @@
                     <div class="skill-item"> <img src="./images/csharp.png" alt="C#" width="50" title="C#">
                         <p>C#</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/dotnet.png" alt=".NET" width="50" title=">NET Framework">
+                    <div class="skill-item"> <img src="./images/dotnet.png" alt=".NET" width="50"
+                            title=">NET Framework">
                         <p>.NET</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/grpc.png" alt="gRPC" width="50" title="Remote Procedural Calls">
+                    <div class="skill-item"> <img src="./images/grpc.png" alt="gRPC" width="50"
+                            title="Remote Procedural Calls">
                         <p>gRPC</p>
                     </div>
                     <div class="skill-item" title="Amazon Web Services"> <i class="fab fa-aws aws"></i>
@@ -140,22 +172,26 @@
                     <div class="skill-item"> <i class="fab fa-git-alt git" title="Git"></i>
                         <p>Git</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/ef.png" alt="Entity Framework" width="50" title="Entity Framework">
+                    <div class="skill-item"> <img src="./images/ef.png" alt="Entity Framework" width="50"
+                            title="Entity Framework">
                         <p>Entity Framework</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/asp.png" alt="ASP .NET core" width="40" title="ASP .NET Core">
+                    <div class="skill-item"> <img src="./images/asp.png" alt="ASP .NET core" width="40"
+                            title="ASP .NET Core">
                         <p>ASP .NET Core</p>
                     </div>
                     <div class="skill-item"> <img src="./images/dynamo.png" alt="Dynamo DB" width="40" title="DynamoDB">
                         <p>NoSQL DynamoDB</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/agile.png" alt="Agile Methodology" width="50" title="Agile">
+                    <div class="skill-item"> <img src="./images/agile.png" alt="Agile Methodology" width="50"
+                            title="Agile">
                         <p>Agile</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/dsa.png" alt="Data Structures and Algorithms" width="50" title="Data Structures and Algorithms">
+                    <div class="skill-item"> <img src="./images/dsa.png" alt="Data Structures and Algorithms" width="50"
+                            title="Data Structures and Algorithms">
                         <p>DSA</p>
                     </div>
-                    <div class="skill-item"> <img src="./images/dp.png" alt="Design Patterns" width="50" >
+                    <div class="skill-item"> <img src="./images/dp.png" alt="Design Patterns" width="50">
                         <p>Design Patterns</p>
                     </div>
                 </div>
@@ -179,12 +215,15 @@
         <footer>
             <div class="container">
                 <div class="contact-links">
-                    <a href="mailto:ritikjain10@outlook.com" target="_blank"><img src="./images/message.gif" width = "40" alt="Email" class="raise" title="Email"></a>
-                    <a href="https://linkedin.com/in/ritikkumarjain" target="_blank"><img src="./images/linkedin.png" width="40" alt="LinkedIn" class="raise" title="LinkedIn"></a>
-                    <a href="https://github.com/ritikkumarjain" target="_blank"><img src="./images/github.png" width="40" alt="Github" class="raise" title="Github"></a>
+                    <a href="mailto:ritikjain10@outlook.com" target="_blank"><img src="./images/message.gif" width="40"
+                            alt="Email" class="raise" title="Email"></a>
+                    <a href="https://linkedin.com/in/ritikkumarjain" target="_blank"><img src="./images/linkedin.png"
+                            width="40" alt="LinkedIn" class="raise" title="LinkedIn"></a>
+                    <a href="https://github.com/ritikkumarjain" target="_blank"><img src="./images/github.png"
+                            width="40" alt="Github" class="raise" title="Github"></a>
                 </div>
-                <p>Made with <img src="./images/love.png" width="25" class="heartbeat" alt ="hearbeat"> by ऋतिक. | <a href="#experience">Experience</a> | <a
-                        href="#projects">Projects</a></p>
+                <p>Made with <img src="./images/love.png" width="25" class="heartbeat" alt="hearbeat"> by ऋतिक. | <a
+                        href="#experience">Experience</a> | <a href="#projects">Projects</a></p>
             </div>
         </footer>
         <script> // Smooth scrolling for anchor links document.querySelectorAll('a[href^="#"]').forEach(anchor => { anchor.addEventListener('click', function (e) { e.preventDefault(); document.querySelector(this.getAttribute('href')).scrollIntoView({ behavior: 'smooth' }); }); }); </script>
