Leetcode stats refined

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 <h2>Coding Stats</h2>
                 <div class="certifications">
                     <div class="certification-item">
-                        <img src="https://leetcode.card.workers.dev/poshis?theme=default&font=baloo&extension=null"
-                            alt="LeetCode Stats" style="margin-bottom: 10px">
+                        <img class="leetcode-card" src="https://leetcode.card.workers.dev/poshis?theme=default&font=baloo&extension=null"
+                            alt="LeetCode Stats" >
                         <h4>Leetcode</h4>
                     </div>
                 </div>
