Added Borders to boxes, Experience section horizontal

--- a/index.html
+++ b/index.html
@@ -21,42 +21,51 @@
         <section id="experience">
             <div class="container">
                 <h2>Experience</h2>
-                <div class="experience-item">
-                    <h3>Programmer Analyst</h3>
-                    <p><b>Cognizant Technology Solutions | Sept 2022 - Present</b></p>
-                    <p><i class="fa-solid fa-angle-right"></i> Played a key role in development of a menu feature for a
-                        major food-chain’s digital ordering
-                        platform OrderServ 2.0 .
-                        Optimized database operations to prevent database throttling during High Traffic periods.</p>
-                    <p><i class="fa-solid fa-angle-right"></i> Provided technical support, successfully troubleshot and
-                        resolved critical production/non-prod
-                        issues and
-                        implementing bug fixes and enhancements to maintain system stability ensuring minimal downtime.
-                    </p>
-                    <p><i class="fa-solid fa-angle-right"></i> Collaborated effectively with cross functional teams to
-                        enhance ordering, payment and delivery
-                        features.Regularly
-                        engaged with client from various markets, gathering requirements and incorporating feedback to
-                        improve platform
-                        functionality</p>
+                <div class="experience-container">
+                    <div class="experience-item">
+                        <h3>Programmer Analyst</h3>
+                        <p><b>Cognizant Technology Solutions | Sept 2022 - Present</b></p>
+                        <p><i class="fa-solid fa-angle-right"></i> Played a key role in development of a menu feature
+                            for a
+                            major food-chain’s digital ordering
+                            platform OrderServ 2.0 .
+                            Optimized database operations to prevent database throttling during High Traffic periods.
+                        </p>
+                        <p><i class="fa-solid fa-angle-right"></i> Provided technical support, successfully troubleshot
+                            and
+                            resolved critical production/non-prod
+                            issues and
+                            implementing bug fixes and enhancements to maintain system stability ensuring minimal
+                            downtime.
+                        </p>
+                        <p><i class="fa-solid fa-angle-right"></i> Collaborated effectively with cross functional teams
+                            to
+                            enhance ordering, payment and delivery
+                            features.Regularly
+                            engaged with client from various markets, gathering requirements and incorporating feedback
+                            to
+                            improve platform
+                            functionality</p>
 
-                </div>
-                <div class="experience-item">
-                    <h3>Programmer Analyst</h3>
-                    <p><b>Cognizant Technology Solutions | Mar 2022 - Aug 2022</b></p>
-                    <p><i class="fa-solid fa-angle-right"></i> Quickly developed proficiency in various tools and
-                        technologies, including C#, .NET Frameworks,
-                        DSA, Design
-                        patterns, etc through intensive training and handson projects.</p>
-                    <p><i class="fa-solid fa-angle-right"></i> Actively contributed to the implementation of the MFPE
-                        project Policy Administration System,
-                        closely with team
-                        members and mentors.</p>
-                    <p><i class="fa-solid fa-angle-right"></i> Demonstrated strong dedication to professional
-                        development consistently completing assessments
-                        and progressing
-                        through training training programs.</p>
+                    </div>
+                    <div class="experience-item">
+                        <h3>Programmer Analyst</h3>
+                        <p><b>Cognizant Technology Solutions | Mar 2022 - Aug 2022</b></p>
+                        <p><i class="fa-solid fa-angle-right"></i> Quickly developed proficiency in various tools and
+                            technologies, including C#, .NET Frameworks,
+                            DSA, Design
+                            patterns, etc through intensive training and handson projects.</p>
+                        <p><i class="fa-solid fa-angle-right"></i> Actively contributed to the implementation of the
+                            MFPE
+                            project Policy Administration System,
+                            closely with team
+                            members and mentors.</p>
+                        <p><i class="fa-solid fa-angle-right"></i> Demonstrated strong dedication to professional
+                            development consistently completing assessments
+                            and progressing
+                            through training training programs.</p>
 
+                    </div>
                 </div>
             </div>
         </section>
@@ -78,8 +87,9 @@
                 <h2>Coding Stats</h2>
                 <div class="certifications">
                     <div class="certification-item">
-                        <img class="leetcode-card" src="https://leetcode.card.workers.dev/poshis?theme=default&font=baloo&extension=null"
-                            alt="LeetCode Stats" >
+                        <img class="leetcode-card"
+                            src="https://leetcode.card.workers.dev/poshis?theme=default&font=baloo&extension=null"
+                            alt="LeetCode Stats">
                         <h4>Leetcode</h4>
                     </div>
                 </div>
