--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
             <div class="container">
                 <div class="text-box">
                     <h1><span class="head1">RITIK KUMAR JAIN</span></h1>
+                    <p>Hi I'M Ritik, I build reliable backend systems using C#, Node.js, and AWS. Currently, I’m working on a digital food ordering system
+                    for multiple markets at Cognizant. I pay close attention to detail, ensuring that everything I work on is high quality.
+                    I'm certified in AWS (CCP) and am working towards the Developer Associate certification. My goal is to keep improving,
+                    collaborate with others and progress ahead in my career</p>
                 </div>
             </div>
         </header>
         <section id="experience">
             <div class="container">
                 <h2>Experience</h2>
-                <div class="experience-container">
+                <div class="experience">
                     <div class="experience-item">
                         <h3>Programmer Analyst</h3>
                         <p><b>Cognizant Technology Solutions | Sept 2022 - Present</b></p>
@@ -46,7 +50,7 @@
                             to
                             improve platform
                             functionality</p>
-
+        
                     </div>
                     <div class="experience-item">
                         <h3>Programmer Analyst</h3>
@@ -64,7 +68,7 @@
                             development consistently completing assessments
                             and progressing
                             through training training programs.</p>
-
+        
                     </div>
                 </div>
             </div>
