Removing Leetcode as separate section and including in description as button stats

--- a/index.html
+++ b/index.html
@@ -16,9 +16,21 @@
                 <div class="text-box">
                     <h1><span class="head1">RITIK KUMAR JAIN</span></h1>
                     <p>Hi I'M Ritik, I build reliable backend systems using C#, Node.js, and AWS. Currently, I’m working on a digital food ordering system
-                    for multiple markets at Cognizant. I pay close attention to detail, ensuring that everything I work on is high quality.
+                    for multiple markets at Cognizant. I pay close attention to detail, ensuring to delivery feature of quality.
                     I'm certified in AWS (CCP) and am working towards the Developer Associate certification. My goal is to keep improving,
-                    collaborate with others and progress ahead in my career</p>
+                    collaborate with others and progress ahead in my career. I am currently grinding up my DSA
+                    skills. Here is my
+                    <!-- Trigger Button -->
+                    <button class="open-modal-button">Leetcode Stats</button> .
+                    
+                    <!-- Modal Structure -->
+                    <div class="modal" id="statsModal">
+                        <div class="modal-content">
+                            <span class="close-button">&times;</span>
+                            <img src="https://leetcode.card.workers.dev/poshis?theme=default&font=baloo&extension=null"
+                                alt="LeetCode Stats" />
+                        </div>
+                    </div></p>
                 </div>
             </div>
         </header>
@@ -86,15 +98,6 @@
                             <h4>AWS Certified Cloud Practitioner <i class="fa-solid fa-link fa-spin"
                                     title="Open External Link"></i></h4>
                         </a>
-                    </div>
-                </div>
-                <h2>Coding Stats</h2>
-                <div class="certifications">
-                    <div class="certification-item">
-                        <img class="leetcode-card"
-                            src="https://leetcode.card.workers.dev/poshis?theme=default&font=baloo&extension=null"
-                            alt="LeetCode Stats">
-                        <h4>Leetcode</h4>
                     </div>
                 </div>
             </div>
@@ -240,7 +243,7 @@
                         href="#experience">Experience</a> | <a href="#projects">Projects</a></p>
             </div>
         </footer>
-        <script> // Smooth scrolling for anchor links document.querySelectorAll('a[href^="#"]').forEach(anchor => { anchor.addEventListener('click', function (e) { e.preventDefault(); document.querySelector(this.getAttribute('href')).scrollIntoView({ behavior: 'smooth' }); }); }); </script>
+        <script src = "script.js"> // Smooth scrolling for anchor links document.querySelectorAll('a[href^="#"]').forEach(anchor => { anchor.addEventListener('click', function (e) { e.preventDefault(); document.querySelector(this.getAttribute('href')).scrollIntoView({ behavior: 'smooth' }); }); }); </script>
     </body>
 
     </html>
